--- a/css/main.css
+++ b/css/main.css
@@ -2,26 +2,27 @@
     --background: rgb(255, 255, 255);
     --navbar-background: rgb(223, 223, 223);
     --text-color: rgb(0, 0, 0);
+    --navbar-hover: rgb(207, 207, 207);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background: rgb(0, 0, 0);
+        --background: rgb(25, 25, 25);
         --navbar-background: rgb(27, 27, 27);
         --text-color:  rgb(255, 255, 255);
+        --navbar-hover:  rgb(0, 0, 0);
     }
 }
 
 body {
     background: var(--background);
+    color: var(--text-color);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .navbar.center .navbar-inner {
     text-align: center;
 }
-
-* {box-sizing: border-box}
-body {font-family: Arial, Helvetica, sans-serif;}
 
 .navbar {
   width: 100%;
@@ -40,11 +41,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .navbar a:hover {
-  background-color: rgb(207, 207, 207);
+  background-color: var(--navbar-hover);
 }
 
 .navbar a.active {
-  background-color: rgb(184, 184, 184);
+  background-color: var(--navbar-hover);
 }
 
 @media screen and (max-width: 500px) {
@@ -54,4 +55,29 @@ body {font-family: Arial, Helvetica, sans-serif;}
     width: 100%;
     text-align: left;
   }
+}
+/*ABOUT PAGE*/
+div {
+  font-size: large;
+}
+
+.center {
+  margin: auto;
+  width: 75%;
+}
+
+.right {
+  text-align: right;
+}
+.left {
+  text-align: left;
+}
+
+h2 {
+  text-align: center;
+}
+
+p {
+  text-align: justify;
+  text-align: center;
 }
